change target for snowflake to fork

--- a/singer-connectors/target-snowflake/requirements.txt
+++ b/singer-connectors/target-snowflake/requirements.txt
@@ -1,1 +1,2 @@
-pipelinewise-target-snowflake==1.0.8
+# pipelinewise-target-snowflake==1.0.8
+git+git://github.com/wintersrd/pipelinewise-target-snowflake.git
