--- a/singer-connectors/target-snowflake/requirements.txt
+++ b/singer-connectors/target-snowflake/requirements.txt
@@ -1,2 +1,2 @@
 # pipelinewise-target-snowflake==1.0.8
-git+git://github.com/wintersrd/pipelinewise-target-snowflake.git
+git+https://github.com/wintersrd/pipelinewise-target-snowflake.git
